<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.hxh.apboa.next</groupId>
  <artifactId>apboa-next</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <modules>
    <!-- 基础层 -->
    <module>common</module>
    <!-- 基础设施 -->
    <module>heartbeat</module>
    <!-- 业务层 -->
    <module>biz</module>
    <!-- 引擎层 -->
    <module>engine</module>
    <!-- 调度层 -->
    <module>scheduler</module>
    <!-- 应用层 -->
    <module>runner-console</module>
    <module>runner-runtime</module>
    <module>runner-gateway</module>
    <module>runner-proxy</module>
    <module>runner-file</module>
    <module>runner-websocket</module>
    <module>common-base</module>
    <module>workflow</module>
  </modules>

  <properties>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <spring-boot.version>3.4.9</spring-boot.version>
    <agentscope.version>1.0.12</agentscope.version>
    <mybatis-plus.version>3.5.7</mybatis-plus.version>
    <mysql.java>8.0.33</mysql.java>
    <druid.version>1.2.19</druid.version>
    <lombok.version>1.18.30</lombok.version>
    <groovy.version>4.0.14</groovy.version>
    <guava.version>31.1-jre</guava.version>
    <jjwt.version>0.13.0</jjwt.version>
    <commons-net.version>3.9.0</commons-net.version>
    <aws.version>1.11.543</aws.version>
    <commons-net.version>3.6</commons-net.version>
    <hutool.version>5.8.4</hutool.version>
    <vertx.version>4.5.10</vertx.version>
    <junit.version>3.8.1</junit.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!--spring-boot框架-->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <!-- mybatis-plus框架 -->
      <dependency>
        <groupId>com.baomidou</groupId>
        <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
        <version>${mybatis-plus.version}</version>
      </dependency>
      <!-- druid数据库连接池 -->
      <dependency>
        <groupId>com.alibaba</groupId>
        <artifactId>druid-spring-boot-starter</artifactId>
        <version>${druid.version}</version>
      </dependency>
      <!-- mysql-java -->
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
      </dependency>
      <!-- groovy-all -->
      <dependency>
        <groupId>org.apache.groovy</groupId>
        <artifactId>groovy-all</artifactId>
        <version>${groovy.version}</version>
        <type>pom</type>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version> <!-- 请根据需要使用合适的版本 -->
      </dependency>
      <dependency>
        <groupId>commons-net</groupId>
        <artifactId>commons-net</artifactId>
        <version>${commons-net.version}</version>
      </dependency>
      <dependency>
        <groupId>io.jsonwebtoken</groupId>
        <artifactId>jjwt</artifactId>
        <version>${jjwt.version}</version>
      </dependency>
      <!-- vertx异步非阻塞网关数据面 -->
      <dependency>
        <groupId>io.vertx</groupId>
        <artifactId>vertx-core</artifactId>
        <version>${vertx.version}</version>
      </dependency>
      <dependency>
        <groupId>io.vertx</groupId>
        <artifactId>vertx-web</artifactId>
        <version>${vertx.version}</version>
      </dependency>
      <!-- aws -->
      <dependency>
        <groupId>com.amazonaws</groupId>
        <artifactId>aws-java-sdk-s3</artifactId>
        <version>${aws.version}</version>
      </dependency>
      <!--hutool-->
      <dependency>
        <groupId>cn.hutool</groupId>
        <artifactId>hutool-bom</artifactId>
        <version>${hutool.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-test</artifactId>
        <version>${spring-boot.version}</version>
        <scope>test</scope>
      </dependency>

      <!--项目模块-->
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>common-base</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>common</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-account</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-agent</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-hook</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-knowledge</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-mcp</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-model</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-prompt</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-sensitive</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-skill</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-tool</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>engine</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-resource</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-params</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-a2a</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>scheduler</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-studio</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-sk</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-longterm</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>heartbeat</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>workflow</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-cache</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-mq</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-datasource</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-channel</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-workflow</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
      <dependency>
        <groupId>com.hxh.apboa.next</groupId>
        <artifactId>biz-gateway</artifactId>
        <version>1.0-SNAPSHOT</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <resources>
      <!-- 扫描src/main/java下所有xx.xml文件 -->
      <resource>
        <directory>src/main/java</directory>
        <includes>
          <include>**/*.xml</include>
        </includes>
      </resource>
      <!-- 扫描resources下所有资源 -->
      <resource>
        <directory>src/main/resources</directory>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>${spring-boot.version}</version>
      </plugin>
    </plugins>
  </build>
</project>
